--- a/backend/package.json
+++ b/backend/package.json
@@ -25,7 +25,9 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.3",
     "nodemon": "^3.1.9",
+    "pg": "^8.13.1",
     "stripe": "^17.5.0",
+    "vercel": "^39.2.6",
     "zod": "^3.24.1"
   },
   "devDependencies": {
@@ -34,6 +36,6 @@
     "@types/node": "^22.10.5",
     "prisma": "^6.1.0",
     "tsx": "^4.19.2",
-    "typescript": "^5.7.2"
+    "typescript": "^5.7.3"
   }
 }
