--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "@stripe/stripe-js": "^5.5.0",
     "axios": "^1.7.9",
     "cloudinary": "^2.5.1",
+    "framer-motion": "^12.4.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
