--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "@types/mongoose": "^5.11.96",
     "@types/multer": "^1.4.12",
     "@types/nodemon": "^1.19.6",
+    "axios": "^1.8.4",
     "bcrypt": "^5.1.1",
     "bcrypt-ts": "^5.0.3",
     "cloudinary": "^1.41.3",
