--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.1",
+    "react-toastify": "^11.0.5",
     "router": "^1.3.8",
     "use-router": "^0.4.2"
   },
