--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,14 +18,17 @@
     "@stripe/stripe-js": "^5.5.0",
     "axios": "^1.7.9",
     "cloudinary": "^2.5.1",
+    "clsx": "^2.1.1",
     "framer-motion": "^12.4.3",
     "lucide-react": "^0.525.0",
+    "motion": "^12.23.12",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.1",
     "react-toastify": "^11.0.5",
     "router": "^1.3.8",
+    "tailwind-merge": "^3.3.1",
     "use-router": "^0.4.2"
   },
   "devDependencies": {
